// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render 1`] = `
<DocumentFragment>
  <div
    class="css-v0ob3f"
    height="16"
    width="16"
  >
    <svg>
      ark.svg
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Icon should render fallback 1`] = `
<DocumentFragment>
  <div
    class="css-v0ob3f"
    height="16"
    width="16"
  >
    <span>
      Not found
    </span>
  </div>
</DocumentFragment>
`;

exports[`Icon should render with size 'lg' 1`] = `[Function]`;

exports[`Icon should render with size 'md' 1`] = `[Function]`;

exports[`Icon should render with size 'sm' 1`] = `[Function]`;

exports[`Icon should render with size 'xl' 1`] = `[Function]`;
